users-api/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapi-service-users
  namespace: otus-microservices-k8s-deployment-service-ingress-users
  labels:
    apps: k8s-deployment-service-ingress-users
spec:
  selector:
    app: k8s-deployment-service-ingress-users.webapi
  ports:
    - port: 8801
      targetPort: 8000
  type: LoadBalancer
