users-api/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapi-ingress-users
  namespace: otus-microservices-k8s-deployment-service-ingress-users
  labels:
    apps: k8s-deployment-service-ingress-users
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapi-service-users
            port:
              number: 8801
